refactor: Form input, fix type error

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React 19 + Vite + TS + Router</title>
+    <!-- 카카오맵 SDK -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58ab610b2dd3b79c38c409a19141701b&libraries=services,clusterer"></script>
   </head>
   <body>
     <div id="root"></div>
