--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React 19 + Vite + TS + Router</title>
     <!-- 카카오맵 SDK -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58ab610b2dd3b79c38c409a19141701b&libraries=services,clusterer"></script>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=37c9e9c29fa72ede55586ddacba587ca&libraries=services,clusterer&autoload=false"></script>
   </head>
   <body>
     <div id="root"></div>
